修复 `UnsupportedOperationException` 问题